<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="162dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:id="@+id/ll1"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/applogo2"
            android:layout_width="106dp"
            android:layout_height="92dp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/whatsapplogo" />

        <TextView
            android:id="@+id/heading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo"
            android:text="@string/heading"
            android:textColor="#1c2939"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.176" />

        <TextView
            android:id="@+id/headingdes2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-9dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/headingdescription2"
            android:textColor="#1c2939"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        android:paddingStart="16dp"
        android:paddingEnd="18dp"
        android:gravity="center_horizontal"
        android:id="@+id/ll2">

        <EditText
            android:id="@+id/email2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email1"
            android:drawablePadding="9dp"
            android:padding="14dp"
            android:background="@drawable/shape"
            android:hint="@string/email2"
            android:inputType="textEmailAddress"
            android:textColorHint="#1c2939"
            android:importantForAccessibility="yes"
            android:textColor="#000000"
            android:tooltipText="@string/tool9"
            android:hapticFeedbackEnabled="true"
            tools:ignore="UnusedAttribute" />

        <EditText
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_pass1"
            android:drawablePadding="9dp"
            android:padding="14dp"
            android:background="@drawable/shape"
            android:hint="@string/password2"
            android:inputType="textPassword"
            android:textColorHint="#1c2939"
            android:importantForAccessibility="yes"
            android:textColor="#000000"
            android:tooltipText="@string/tool10"
            android:hapticFeedbackEnabled="true"
            tools:ignore="UnusedAttribute" />

        <ImageView
            android:id="@+id/showPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="-37dp"
            android:layout_marginEnd="18dp"
            android:src="@drawable/passvisible"
            android:onClick="ShowHidePass"
            tools:ignore="OnClick,UsingOnClickInXml" />

        <TextView
            android:id="@+id/forgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="Forgot Password?"
            android:onClick="reset"
            android:textStyle="bold"
            android:textColor="#1c2939"
            android:tooltipText="Reset Password"
            android:hapticFeedbackEnabled="true"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="15dp"
            tools:ignore="UnusedAttribute,UsingOnClickInXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:orientation="vertical"
        android:id="@+id/ll3">

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="27dp"
            android:hapticFeedbackEnabled="true"
            android:text="@string/loginbutton"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#1C2939"
            android:tooltipText="@string/tool11"
            app:backgroundTint="#0FFFFFFF"
            tools:ignore="UnusedAttribute" />
        <TextView
            android:id="@+id/nhcga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/nhcga"
            android:textStyle="bold"
            android:textColor="#1c2939"
            android:tooltipText="@string/tool12"
            android:hapticFeedbackEnabled="true"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:id="@+id/ll4">

        <View
            android:id="@+id/divider1"
            android:layout_width="66dp"
            android:layout_height="2dp"
            android:padding="9dp"
            android:background="#1c2939" />

        <TextView
            android:id="@+id/olw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/olw"
            android:textColor="#1c2939"
            android:padding="9dp"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <View
            android:id="@+id/divider2"
            android:layout_width="66dp"
            android:layout_height="2dp"
            android:padding="9dp"
            android:background="#1c2939"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:id="@+id/ll5"
        android:padding="14dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/phonelogo1"
            android:layout_width="67dp"
            android:layout_height="67dp"
            android:background="?colorSurface"
            android:tooltipText="@string/tool6"
            android:hapticFeedbackEnabled="true"
            android:src="@drawable/phone"
            android:onClick="phoneOtp"
            tools:ignore="UnusedAttribute" />

        <ImageButton
            android:id="@+id/googlelogo1"
            android:layout_width="67dp"
            android:layout_height="67dp"
            android:background="?colorSurface"
            android:tooltipText="@string/tool7"
            android:hapticFeedbackEnabled="true"
            android:src="@drawable/google"
            tools:ignore="UnusedAttribute" />

        <ImageButton
            android:id="@+id/fblogo1"
            android:layout_width="67dp"
            android:layout_height="67dp"
            android:background="?colorSurface"
            android:tooltipText="@string/tool8"
            android:hapticFeedbackEnabled="true"
            android:src="@drawable/facebook"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:id="@+id/ll6"
        android:gravity="center"
        android:layout_marginTop="-18dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobiletext"
            android:layout_marginStart="14dp"
            android:textColor="#1c2939"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/googletext"
            android:gravity="center_horizontal"
            android:layout_marginStart="27dp"
            android:textColor="#1c2939"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/facebooktext"
            android:textColor="#1c2939"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>