<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="162dp"
        android:orientation="vertical"
        android:gravity="left"
        android:layout_margin="34dp"
        android:layout_marginStart="9dp"
        android:id="@+id/ll1"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/avatar"
            android:layout_marginTop="25dp"/>


        <TextView
            android:id="@+id/heading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome To OTP Authentication"
            android:textColor="#1c2939"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.176" />

        <TextView
            android:id="@+id/headingdes2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/headingdescription2"
            android:textColor="#1c2939"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:padding="9dp"
        app:layout_constraintTop_toBottomOf="@+id/ll1"
        tools:layout_editor_absoluteX="19dp">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="-46.5dp"
            app:ccp_showFullName="false"
            app:ccp_showNameCode="false"
            app:ccp_showPhoneCode="true"
            app:ccpDialog_showCloseIcon="true"
            app:ccp_textSize="16sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EnterPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EnterM"
            android:textSize="16sp"
            android:inputType="number"
            android:maxLength="15"
            android:letterSpacing="0.09"
            android:paddingStart="97dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ChooseCC"
            android:layout_marginTop="9dp"
            android:textSize="10sp"
            android:layout_marginStart="14dp"/>


    </com.google.android.material.textfield.TextInputLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="126dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="27dp"
        android:background="@drawable/arrow_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/PhoneNextArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="PhoneNextArrow"
            android:padding="9dp"
            android:src="@drawable/arrow_right" />
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>